--- a/cloudflare_tunnel/config.json
+++ b/cloudflare_tunnel/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Cloudflare Tunnel",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "slug": "cloudflare-tunnel",
   "description": "Cloudflare Tunnel for Home Assistant",
   "url": "https://github.com/w35l3y/hassio-addons/cloudflare-tunnel",
@@ -24,10 +24,16 @@
   },
   "schema": {
     "tunnel": "str",
+    "credentials-file": "str?",
+    "no-autoupdate": "bool?",
+    "loglevel": "str?",
+    "logfile": "str?",
+    "url": "str?",
     "ingress": [
       {
+        "service": "str?",
         "hostname": "str?",
-        "service": "str"
+        "path": "str?"
       }
     ]
   }
