--- a/cloudflare_tunnel/config.json
+++ b/cloudflare_tunnel/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Cloudflare Tunnel",
-  "version": "1.0.1-1",
+  "version": "1.1.0",
   "slug": "cloudflare-tunnel",
   "description": "Cloudflare Tunnel for Home Assistant",
   "url": "https://github.com/w35l3y/hassio-addons/cloudflare-tunnel",
@@ -11,7 +11,7 @@
   "startup": "services",
   "boot": "auto",
   "options": {
-    "tunnel": "hassio",
+    "no-autoupdate": true,
     "ingress": [
       {
         "hostname": "",
@@ -23,7 +23,7 @@
     ]
   },
   "schema": {
-    "tunnel": "str",
+    "tunnel": "str?",
     "credentials-file": "str?",
     "no-autoupdate": "bool?",
     "loglevel": "str?",
