--- a/cloudflare_tunnel/Dockerfile
+++ b/cloudflare_tunnel/Dockerfile
@@ -3,6 +3,8 @@ FROM $BUILD_FROM
 
 ARG BUILD_ARCH
 RUN \
+#    CVERSION="latest/download" \
+    CVERSION="download/2021.8.2" \
     ARCH="${BUILD_ARCH}" \
     && if [[ "${BUILD_ARCH}" = "aarch64" ]]; then ARCH="arm64"; fi \
     && if [[ "${BUILD_ARCH}" = "amd64" ]]; then ARCH="amd64"; fi \
@@ -10,7 +12,7 @@ RUN \
     && if [[ "${BUILD_ARCH}" = "armv7" ]]; then ARCH="arm"; fi \
     && if [[ "${BUILD_ARCH}" = "i386" ]]; then ARCH="386"; fi \
     && apk add --no-cache libc6-compat yq \
-    && wget -O /usr/local/bin/cloudflared https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-$ARCH && chmod +x /usr/local/bin/cloudflared
+    && wget -O /usr/local/bin/cloudflared https://github.com/cloudflare/cloudflared/releases/$CVERSION/cloudflared-linux-$ARCH && chmod +x /usr/local/bin/cloudflared
 
 RUN cloudflared -v
 
