--- a/cloudflare_tunnel/Dockerfile
+++ b/cloudflare_tunnel/Dockerfile
@@ -3,8 +3,8 @@ FROM $BUILD_FROM
 
 ARG BUILD_ARCH
 RUN \
-#    CVERSION="latest/download" \
-    CVERSION="download/2021.8.1" \
+    CVERSION="latest/download" \
+#    CVERSION="download/2021.8.1" \
     ARCH="${BUILD_ARCH}" \
     && if [[ "${BUILD_ARCH}" = "aarch64" ]]; then ARCH="arm64"; fi \
     && if [[ "${BUILD_ARCH}" = "amd64" ]]; then ARCH="amd64"; fi \
