--- a/cloudflare_tunnel/config.json
+++ b/cloudflare_tunnel/config.json
@@ -15,12 +15,12 @@
     "ingress": [
       {
         "hostname": "",
-        "service": "http://homeassistant.local:8123"
+        "service": "http://ha_local_ip:8123"
       },
       {
         "service": "http_status:404"
       }
-    ]
+    ],
   },
   "schema": {
     "tunnel": "str?",
