--- a/cloudflare_tunnel/config.json
+++ b/cloudflare_tunnel/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Cloudflare Tunnel",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "slug": "cloudflare-tunnel",
   "description": "Cloudflare Tunnel for Home Assistant",
   "url": "https://github.com/w35l3y/hassio-addons/tree/main/cloudflare_tunnel",
@@ -10,40 +10,43 @@
   "map": ["config:rw"],
   "startup": "services",
   "boot": "auto",
+  "ports": {
+    "41705/tcp": 41705
+  },
   "options": {
     "no-autoupdate": true,
-		"originRequest": null,
+    "originRequest": null,
     "ingress": [
       {
         "hostname": "",
         "service": "http://ha_local_ip:8123",
-				"originRequest": null
+        "originRequest": null
       },
       {
         "service": "http_status:404",
-				"originRequest": null
+        "originRequest": null
       }
     ]
   },
   "schema": {
     "tunnel": "str?",
     "credentials-file": "str?",
-		"originRequest": {
-			"connectTimeout": "str?",
-			"tlsTimeout": "str?",
-			"tcpKeepAlive": "str?",
-			"​noHappyEyeballs": "bool?",
-			"keepAliveConnections": "int(0,)?",
-			"​keepAliveTimeout": "str?",
-			"httpHostHeader": "str?",
-			"originServerName": "str?",
-			"caPool": "str?",
-			"noTLSVerify": "bool?",
-			"disableChunkedEncoding": "bool?",
-			"proxyAddress": "str?",
-			"proxyPort": "port?",
-			"proxyType": "str?"
-		},
+    "originRequest": {
+      "connectTimeout": "str?",
+      "tlsTimeout": "str?",
+      "tcpKeepAlive": "str?",
+      "noHappyEyeballs": "bool?",
+      "keepAliveConnections": "int(0,)?",
+      "keepAliveTimeout": "str?",
+      "httpHostHeader": "str?",
+      "originServerName": "str?",
+      "caPool": "str?",
+      "noTLSVerify": "bool?",
+      "disableChunkedEncoding": "bool?",
+      "proxyAddress": "str?",
+      "proxyPort": "port?",
+      "proxyType": "str?"
+    },
     "no-autoupdate": "bool?",
     "loglevel": "str?",
     "logfile": "str?",
@@ -54,22 +57,22 @@
         "hostname": "str?",
         "path": "str?",
         "service": "str?",
-				"originRequest": {
-					"connectTimeout": "str?",
-					"tlsTimeout": "str?",
-					"tcpKeepAlive": "str?",
-					"​noHappyEyeballs": "bool?",
-					"keepAliveConnections": "int(0,)?",
-					"​keepAliveTimeout": "str?",
-					"httpHostHeader": "str?",
-					"originServerName": "str?",
-					"caPool": "str?",
-					"noTLSVerify": "bool?",
-					"disableChunkedEncoding": "bool?",
-					"proxyAddress": "str?",
-					"proxyPort": "port?",
-					"proxyType": "str?"
-				},
+        "originRequest": {
+          "connectTimeout": "str?",
+          "tlsTimeout": "str?",
+          "tcpKeepAlive": "str?",
+          "noHappyEyeballs": "bool?",
+          "keepAliveConnections": "int(0,)?",
+          "keepAliveTimeout": "str?",
+          "httpHostHeader": "str?",
+          "originServerName": "str?",
+          "caPool": "str?",
+          "noTLSVerify": "bool?",
+          "disableChunkedEncoding": "bool?",
+          "proxyAddress": "str?",
+          "proxyPort": "port?",
+          "proxyType": "str?"
+        },
       }
     ]
   }
