--- a/cloudflare_tunnel/config.json
+++ b/cloudflare_tunnel/config.json
@@ -57,22 +57,7 @@
         "hostname": "str?",
         "path": "str?",
         "service": "str?",
-        "originRequest": {
-          "connectTimeout": "str?",
-          "tlsTimeout": "str?",
-          "tcpKeepAlive": "str?",
-          "noHappyEyeballs": "bool?",
-          "keepAliveConnections": "int(0,)?",
-          "keepAliveTimeout": "str?",
-          "httpHostHeader": "str?",
-          "originServerName": "str?",
-          "caPool": "str?",
-          "noTLSVerify": "bool?",
-          "disableChunkedEncoding": "bool?",
-          "proxyAddress": "str?",
-          "proxyPort": "port?",
-          "proxyType": "str?"
-        }
+        "originRequest": {}
       }
     ]
   }
