--- a/cloudflare_tunnel/config.json
+++ b/cloudflare_tunnel/config.json
@@ -56,8 +56,7 @@
       {
         "hostname": "str?",
         "path": "str?",
-        "service": "str?",
-        "originRequest": {}
+        "service": "str?"
       }
     ]
   }
