--- a/cloudflare_tunnel/config.json
+++ b/cloudflare_tunnel/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Cloudflare Tunnel",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "slug": "cloudflare-tunnel",
   "description": "Cloudflare Tunnel for Home Assistant",
   "url": "https://github.com/w35l3y/hassio-addons/tree/main/cloudflare_tunnel",
@@ -16,6 +16,7 @@
   "options": {
     "no-autoupdate": true,
     "originRequest": {},
+    "metrics": "localhost:41705",
     "ingress": [
       {
         "hostname": "",
