Add tunnel in config

--- a/cloudflare_tunnel/config.json
+++ b/cloudflare_tunnel/config.json
@@ -25,7 +25,8 @@
       {
         "service": "http_status:404"
       }
-    ]
+    ],
+    "tunnel": "homeassistant"
   },
   "schema": {
     "tunnel": "str?",
