--- a/whatsapp/config.json
+++ b/whatsapp/config.json
@@ -7,7 +7,7 @@
   "ingress": true,
   "ingress_entry": "ingress/",
   "panel_icon": "mdi:whatsapp",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "arch": ["aarch64", "amd64"],
   "map": ["config:rw"],
   "startup": "services",
   "boot": "auto",
