--- a/whatsapp/Dockerfile
+++ b/whatsapp/Dockerfile
@@ -8,16 +8,17 @@ COPY rootfs /
 
 WORKDIR /home/pptruser/app
 
-# https://github.com/puppeteer/puppeteer/blob/main/docs/troubleshooting.md#running-on-alpine
-# Add user so we don't need --no-sandbox.
-RUN apk add --no-cache --update su-exec nodejs npm chromium rsync \
+ARG BUILD_ARCH
+
+RUN \
+    ARCH="${BUILD_ARCH}" \
+    && if [[ "${BUILD_ARCH}" = "amd64" ]]; then ARCH="x86_64"; fi \
+    && echo $ARCH > /etc/apk/arch \
+    && apk add --no-cache --update su-exec nodejs npm chromium rsync \
     && npm install \
     && chmod +x run.sh \
     && addgroup -S pptruser \
     && adduser -S -g pptruser pptruser \
     && chown -R pptruser:pptruser /home/pptruser
-
-# Run everything after as non-privileged user.
-#USER pptruser
 
 CMD [ "./run.sh" ]
