--- a/whatsapp/config.json
+++ b/whatsapp/config.json
@@ -1,11 +1,9 @@
 {
   "name": "WhatsApp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "slug": "whatsapp",
   "description": "WhatsApp for Home Assistant",
   "url": "https://github.com/w35l3y/hassio-addons/tree/main/whatsapp",
-  "ingress": true,
-  "ingress_entry": "ingress/",
   "panel_icon": "mdi:whatsapp",
   "arch": ["aarch64", "amd64"],
   "map": ["config:rw"],
@@ -23,6 +21,8 @@
   },
   "options": {
     "env_vars": [
+      { "name": "OPTS_HA_BASE_URL", "value": "http://homeassistant:8123" },
+      { "name": "OPTS_HA_TOKEN", "value": "" },
       { "name": "OPTS_HA_CHAT_IDS_FILTER", "value": "GROUP" },
       { "name": "OPTS_HA_RETRY_QUEUE", "value": "true" },
       { "name": "OPTS_HA_NEW_SESSION", "value": "false" },
