--- a/whatsapp/rootfs/home/pptruser/app/package.json
+++ b/whatsapp/rootfs/home/pptruser/app/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --trace-warnings --unhandled-rejections=strict /index.js",
+    "start": "node --trace-warnings /index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "w35l3y",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
     "express": "^4.17.2",
     "qrcode": "^1.5.0",
-    "puppeteer": "10.1.0",
-    "whatsapp-web.js": "^1.15.3"
+    "whatsapp-web.js": "^1.15.4"
   }
 }
