--- a/whatsapp/Dockerfile
+++ b/whatsapp/Dockerfile
@@ -2,7 +2,9 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser \
+    PUPPETEER_CHROMIUM_REVISION=902218
 
 COPY rootfs /
 
@@ -14,7 +16,7 @@ RUN \
     ARCH="${BUILD_ARCH}" \
     && if [[ "${BUILD_ARCH}" = "amd64" ]]; then ARCH="x86_64"; fi \
     && echo $ARCH > /etc/apk/arch \
-    && apk add --no-cache --update su-exec nodejs npm chromium rsync \
+    && apk add --no-cache --update mesa-egl mesa-gles su-exec nodejs npm rsync chromium \
     && npm install \
     && chmod +x run.sh \
     && addgroup -S pptruser \
