--- a/whatsapp/Dockerfile
+++ b/whatsapp/Dockerfile
@@ -8,19 +8,14 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
 
 COPY rootfs /
 
-WORKDIR /home/pptruser/app
-
 ARG BUILD_ARCH
 
 RUN \
     ARCH="${BUILD_ARCH}" \
     && if [[ "${BUILD_ARCH}" = "amd64" ]]; then ARCH="x86_64"; fi \
     && echo $ARCH > /etc/apk/arch \
-    && apk add --no-cache --update mesa-egl mesa-gles su-exec nodejs npm rsync chromium \
+    && apk add --no-cache --update mesa-egl mesa-gles nodejs npm chromium \
     && npm install \
-    && chmod +x run.sh \
-    && addgroup -S pptruser \
-    && adduser -S -g pptruser pptruser \
-    && chown -R pptruser:pptruser /home/pptruser
+    && chmod +x run.sh
 
-CMD [ "./run.sh" ]
+CMD [ "/run.sh" ]
