--- a/cloudflare_tunnel/config.json
+++ b/cloudflare_tunnel/config.json
@@ -1,11 +1,12 @@
 {
   "name": "Cloudflare Tunnel",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "slug": "cloudflare_tunnel",
   "description": "Cloudflare Tunnel for Home Assistant",
   "url": "https://github.com/w35l3y/hassio-addons/tree/main/cloudflare_tunnel",
   "ingress": false,
   "init": false,
+  "apparmor": true,
   "panel_icon": "mdi:tunnel",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "map": ["config:rw"],
